[workspace]
resolver = "2"
members = [
    "amfiteatr_core",
    "amfiteatr_net_ext",
    "amfiteatr_proc_macro",
    "amfiteatr_rl",
    "amfiteatr_examples",
    "amfiteatr_classic",
    "amfiteatr",
]

[patch.crates-io]
amfiteatr_core = {path = "amfiteatr_core"}
amfiteatr_rl = {path = "amfiteatr_rl"}
amfiteatr_net_ext = {path = "amfiteatr_net_ext"}
amfiteatr_proc_macro = {path = "amfiteatr_proc_macro"}
amfiteatr_classic = {path = "amfiteatr_classic"}
amfiteatr_examples = {path = "amfiteatr_examples"}
amfiteatr = {path = "amfiteatr"}
