[package]
name = "amfiteatr"
version = "0.14.0-rc"
edition = "2024"

repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories = ["games", "simulation", "concurrency", "development-tools"]
description = "Placeholder crate to gather developed crates to help modeling game theory problems"

[dependencies]

amfiteatr_core = "0.14.0-rc"
amfiteatr_rl = "0.14.0-rc"
amfiteatr_classic = "0.14.0-rc"
amfiteatr_net_ext = "0.14.0-rc"
