[package]
name = "amfiteatr_classic"
version = "0.14.0-rc"
edition = "2024"
repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories = ["games", "simulation", "concurrency", "development-tools"]
description = "Implementation of some classic game theory problems to research on"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

rand = "0.9.2"

enum-map = {version = "2.7.3", features = ["serde"]}
log = "0.4.21"
serde = {version = "1.0.218", features = ["rc", "derive"]}
thiserror = "2.0.12"
speedy = {version = "0.8.7"}
rand_distr = "0.5.1"


amfiteatr_core = {version = "0.14.0-rc" }
amfiteatr_rl = {version = "0.14.0-rc" }