[package]
name = "amfiteatr_core"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories = ["games", "simulation", "concurrency", "development-tools"]
description = "A framework to model and simulate game theory problems with many agents"
[lib]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "1.0.58"
speedy = {version = "0.8.7", optional = true}
log = { version = "0.4.21", optional =  true }
rand = "0.8.5"
serde = {version = "1.0.197", features = ["derive"],  optional = true}
ron = {version = "0.8.1", optional = true}
nom = {version = "7.1.3"}
clap = { version = "4.5.4", features = ["derive"] }


[features]

speedy = ["dep:speedy"]
serde = ["dep:serde"]
demo = []

log_error = ["dep:log"]
log_warn = ["log_error"]
log_info = ["log_warn"]
log_debug = ["log_info"]
log_trace = ["log_debug"]
#manual_control = ["dep:nom"]

