[package]
name = "amfiteatr_core"
version = "0.13.0"
edition = "2024"
repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories = ["games", "simulation", "concurrency", "development-tools"]
description = "A framework to model and simulate game theory problems with many agents"
[lib]



# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

thiserror = "2.0.12"
speedy = {version = "0.8.7", optional = true}
log = { version = "0.4.27", optional =  true }
rand = "0.9.2"
serde = {version = "1.0.219", features = ["derive"],  optional = true}
ron = {version = "0.8.1", optional = true}
nom = {version = "8.0.0"}
clap = { version = "4.5.31", features = ["derive"] }

tch = { version = "0.22.0" , optional = true}
tboard = { version = "0.1.1", optional = true}

amfiteatr_proc_macro = {version = "0.13.0"}
[features]

tboard = ["dep:tboard"]
speedy = ["dep:speedy"]
serde = ["dep:serde"]
demo = []
torch = ["dep:tch"]

log_error = ["dep:log"]
log_warn = ["log_error"]
log_info = ["log_warn"]
log_debug = ["log_info"]
log_trace = ["log_debug"]
#manual_control = ["dep:nom"]

