[package]
name = "amfiteatr_examples"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "prisoner_mpsc"

#[[example]]
#name = "prisoner_tcp"

[[example]]
name = "replicator_dynamics"

[[example]]
name = "custom_reward"

[[example]]
name = "one_fixed"

[[example]]
name = "cart_pole_python"
required-features = ["rl-python"]

#[[example]]
#name = "cart_pole_pure_rust"

[[example]]
name = "connect_four_a2c"
required-features = ["rl-python"]
path = "examples/connect_four/run_model_a2c.rs"

[[example]]
name = "connect_four_ppo"
required-features = ["rl-python"]
path = "examples/connect_four/run_model_ppo.rs"

[[example]]
name = "communication_choice"

[dependencies]


rand = "0.8.5"
log = "0.4.21"
thiserror = "2.0.11"
fern = "0.7.1"
chrono = "0.4.37"
clap = {version = "4.5.4", features = ["derive"]}
anyhow = "1.0.81"
serde = {version = "1.0.197", features = ["derive", "rc"]}
enum-map = {version = "2.7.3", features = ["serde"]}
plotters = "0.3.5"
#plotlib = "0.5.1"

serde_json = "1.0.115"
pyo3 = { version = "0.23.4", features = ["auto-initialize", "py-clone"], optional = true}

amfiteatr_core = {version = "0.7.0", path = "../amfiteatr_core", features = ["serde"] }
amfiteatr_proc_macro = {version = "0.7.0", path = "../amfiteatr_proc_macro"}
amfiteatr_rl = {version = "0.7.0", path = "../amfiteatr_rl", features = []}
amfiteatr_classic = { version = "0.7.0", path = "../amfiteatr_classic" }
amfiteatr_net_ext = {version = "0.7.0", path = "../amfiteatr_net_ext" }
ndarray = "0.16.1"
numpy = "0.23.0"

[features]
rl-python = ["pyo3"]
default = ["log_deep_trace"]
log_deep_error = ["amfiteatr_core/log_error", "amfiteatr_rl/log_error"]
log_deep_warn = ["amfiteatr_core/log_warn", "amfiteatr_rl/log_warn", "log_deep_error"]
log_deep_info = ["amfiteatr_core/log_info", "amfiteatr_rl/log_info", "log_deep_warn"]
log_deep_debug = ["amfiteatr_core/log_debug", "amfiteatr_rl/log_debug", "log_deep_info"]
log_deep_trace = ["amfiteatr_core/log_trace", "amfiteatr_rl/log_trace", "log_deep_debug"]
