[package]
name = "amfiteatr_examples"
version = "0.12.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "prisoner_mpsc"

#[[example]]
#name = "prisoner_tcp"

[[example]]
name = "replicator_dynamics_old"

[[example]]
name = 'replicator_dynamics'

[[example]]
name = "custom_reward"

[[example]]
name = "one_fixed"

[[example]]
name = "cart_pole_python"
required-features = ["rl-python"]

#[[example]]
#name = "cart_pole_pure_rust"

[[example]]
name = "connect_four_a2c"
required-features = ["rl-python"]
path = "examples/connect_four/run_model_a2c.rs"

[[example]]
name = "connect_four_a2c_masking"
required-features = ["rl-python"]
path = "examples/connect_four/run_model_a2c_masking.rs"

[[example]]
name = "connect_four_ppo"
required-features = ["rl-python"]
path = "examples/connect_four/run_model_ppo.rs"

[[example]]
name = "connect_four_ppo_selfplay"
required-features = ["rl-python"]
path = "examples/connect_four/run_model_ppo_selfplay.rs"

[[example]]
name = "connect_four_ppo_masking_selfplay"
required-features = ["rl-python"]
path = "examples/connect_four/run_model_ppo_masking_selfplay.rs"


[[example]]
name = "connect_four_ppo_masking"
required-features = ["rl-python"]
path = "examples/connect_four/run_model_ppo_masking.rs"

[[example]]
name = "communication_choice"

[[bench]]
name  = "c4_ppo_masking"
path = "benches/c4_ppo_masking.rs"
required-features = ["rl-python"]
harness = false

[dependencies]


rand = "0.9.0"
log = "0.4.26"
thiserror = "2.0.11"
fern = "0.7.1"
chrono = "0.4.39"
clap = {version = "4.5.31", features = ["derive"]}
anyhow = "1.0.96"
serde = {version = "1.0.197", features = ["derive", "rc"]}
enum-map = {version = "2.7.3", features = ["serde"]}
plotters = { version = "0.3.7", features = ["fontconfig-dlopen"] }

serde_json = "1.0.139"
serde_yaml = "0.9.34-deprecated"
pyo3 = { version = "0.25.1", features = ["auto-initialize", "py-clone"], optional = true}

amfiteatr_core = {version = "0.12.0", features = ["serde", "tboard"] }
amfiteatr_proc_macro = {version = "0.12.0"}
amfiteatr_rl = {version = "0.12.0", path = "../amfiteatr_rl",  features = []}
amfiteatr_classic = { version = "0.12.0" }
amfiteatr_net_ext = {version = "0.12.0"}
ndarray = "0.16.1"
numpy = "0.25.0"
tboard = "0.1.1"
criterion = "0.6.0"
rayon = "1.10.0"
parking_lot = "0.12.3"
sha2 = "0.10.8"

[features]
rl-python = ["pyo3"]
default = ["log_deep_trace"]
log_deep_error = ["amfiteatr_core/log_error", "amfiteatr_rl/log_error"]
log_deep_warn = ["amfiteatr_core/log_warn", "amfiteatr_rl/log_warn", "log_deep_error"]
log_deep_info = ["amfiteatr_core/log_info", "amfiteatr_rl/log_info", "log_deep_warn"]
log_deep_debug = ["amfiteatr_core/log_debug", "amfiteatr_rl/log_debug", "log_deep_info"]
log_deep_trace = ["amfiteatr_core/log_trace", "amfiteatr_rl/log_trace", "log_deep_debug"]