[package]
name = "amfiteatr_net_ext"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories = ["games", "simulation",  "development-tools"]
description = "Proof of concept extension to provide basic TCP communication"

[[bench]]
name = "tcp_speedy"
harness = false


[dependencies]
log = "0.4.26"
speedy = "0.8.7"

thiserror = "2.0.11"
criterion = "0.5.1"
zeroize = "1.8.1"

amfiteatr_core = {version = "0.8.0", path = "../amfiteatr_core", features = ["speedy", "demo"]}