[package]
name = "amfiteatr_proc_macro"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories = ["games", "simulation", "concurrency", "development-tools"]
description = "Procedural macro crate for amfiteatr_* crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]

syn = {version = "2.0.57", features = ["full", "fold"]}
quote = "1.0.35"
proc-macro2 = { version =  "1.0.79", features = ["proc-macro"]}
enum-map-derive = "0.17.0"
