[package]
name = "amfiteatr_rl"
version = "0.2.1"
edition = "2021"
repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories =  ["games", "simulation",  "development-tools", "science"]
description = "Extensions providing reinforcement learning implementations for `amfiteatr`"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]

tch = "0.15.0"
log = "0.4.20"
thiserror = "1.0.56"
rand = "0.8.5"
generic-array = "1.0.0"

amfiteatr_core = {version = "0.2.1", features = ["demo"]}



