[package]
name = "amfiteatr_rl"
version = "0.6.0"
edition = "2021"
repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories =  ["games", "simulation",  "development-tools", "science"]
description = "Extensions providing reinforcement learning implementations for `amfiteatr`"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



[dependencies]

tch = "0.17.0"
log = { version = "0.4.21", optional = true }
thiserror = "1.0.58"
rand = "0.8.5"
generic-array = "1.0.0"

amfiteatr_core = {version = "0.6.0", path = "../amfiteatr_core", features = ["demo"]}

[features]
log_error = ["dep:log"]
log_warn = ["log_error"]
log_info = ["log_warn"]
log_debug = ["log_info"]
log_trace = ["log_debug"]



