[package]
name = "amfiteatr_rl"
version = "0.9.0"
edition = "2024"
repository = "https://github.com/moroviintaas/amfiteatr"
license-file = "LICENSE"
keywords = ["game", "theory", "model", "player"]
categories =  ["games", "simulation",  "development-tools", "science"]
description = "Extensions providing reinforcement learning implementations for `amfiteatr`"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "multi_actor_entropy"

[dependencies]

tch = "0.19.0"
log = { version = "0.4.26", optional = true }
thiserror = "2.0.11"
rand = "0.9.0"
generic-array = "1.2.0"
getset = "0.1.4"

amfiteatr_core = {version = "0.9.0", path = "../amfiteatr_core", features = ["demo", "torch"]}
tboard = { version = "0.1.1"}
serde = { version = "1.0.219", features = ["derive"] }

[features]
log_error = ["dep:log"]
log_warn = ["log_error"]
log_info = ["log_warn"]
log_debug = ["log_info"]
log_trace = ["log_debug"]



